# Stellar_Libs

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: linux-ubuntu.yml  macos.yml  windows.yml
StellarLibs/: StellarLibs.hpp
StellarLibs/Core/: AI.hpp  Math.hpp  Science.hpp
cmake/: ide.cmake  version.cmake
example/: CMakeLists.txt  app.cpp
include/stellarlibs/: Old_CMakeListsTemplate.txt  version.hpp
include/stellarlibs/classical/math/: test.hpp
include/stellarlibs/classical/math/cpp_files/: test.cpp
include/stellarlibs/math/cpp_files/: test.cpp
